tests/expectations/compiler/function/scope_fail.out
Error [ETYC0372005]: Unknown variable `myGlobal`
    --> compiler-test:5:16
     |
   5 |         return myGlobal;
     |                ^^^^^^^^
